--- a/index.html
+++ b/index.html
@@ -13,106 +13,91 @@
     <title>Contact Me</title>
 </head>
 <body>
-    <section class="seccion_padre d-flex">
-        <span class="border">
-            <div class="chat d-flex flex-column">
-                <div class="d-flex me-0">
-                    <!-- <div class="d-flex flex-row"> -->
-                        <img class="maria ms-4 mt-2" src="./assets/images/maria.jpg" alt="María">
-                        <div class="d-flex flex-column ms-3">
-                            <p class="mb-0 mt-2 fs-5"> María </p>
-                            <p class="dispobible"> Activa ahora </p>
+    <section class="d-flex">
+            <div class="chat border">
+                    <div class="border-bottom d-flex justify-content-between align-items-center">
+                        <div class="maria d-flex align-items-center ms-3">
+                            <img class="mt-0" src="./assets/images/maria.jpg" alt="">
+                            <div class="mt-0 ms-2">
+                                <p class="mb-0 ">María</p>
+                                <p class="activo">Activo ahora</p>
+                            </div>
                         </div>
-                    <!-- </div> -->
-                    <!-- <div class="mt-2 "> -->
-                         <i class="fa-regular fa-message fa-xl ms-5 mt-4 ps-5 pt-2 iconos"></i>
-                        <i class="fa-solid fa-bars fa-xl ms-3 mt-4 pt-2"></i>
-                    <!-- </div> -->
-                </div>
-                <span class="border border-1"></span>
-                <div class="nuevo_chat d-flex justify-content-center align-items-center">
-                    <div class="chat_1 d-flex justify-content-center align-items-center text-white">
-                        <p class="mb-0"> Nuevo chat </p>
+                        <div class="maria_2 mt-0 d-flex">
+                            <i class="fa-regular fa-message fa-xl me-3"></i>
+                            <i class="fa-solid fa-bars fa-xl me-1"></i>
+                        </div>
+                    </div>
+                    <div class="nuevo_chat border d-flex justify-content-center align-items-center">
+                        <div class="nuevo_chat_1 d-flex justify-content-center align-items-center">
+                            <p class="mb-0 mt-0">Nuevo chat</p>
+                        </div>
+                    </div>                
+                <div class="moira border-bottom d-flex ms-2 mb-2 ">
+                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="Moira">
+                    <div >
+                        <p class="mb-0 ms-3 mt-2"> Moira </p>
+                        <p class="ms-3"> At vero eos et accusa </p>
                     </div>
                 </div>
-                <span class="border border-1"></span>
-                <div class="moira d-flex ms-3">
-                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                    <div class="mt-3 ms-4">
-                        <p class="mb-0"> Moira </p>
-                        <p class="disponible"> At vero eos et accusa </p>
+                <div class="moira border-bottom d-flex ms-2 mb-2">
+                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="Alejandra">
+                    <div>
+                        <p class="mb-0 ms-3 mt-2"> Alejandra </p>
+                        <p class="ms-3"> blanditiis praesentium </p>
                     </div>
                 </div>
-                <span class="border border-1"></span>
-                <div class="moira d-flex ms-3">
-                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="">
-                    <div class="mt-3 ms-4">
-                        <p class="mb-0"> Andrea </p>
-                        <p class="disponible"> Disponible ahora </p>
+                <div class="moira border-bottom d-flex ms-2 mb-2">
+                    <img class="mt-2 mb-3 ms-3 " src="./assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="Pedro">
+                    <div>
+                        <p class="mb-0 ms-3 mt-2"> Pedro </p>
+                        <p class="ms-3"> officiis debitis aut  </p>
                     </div>
                 </div>
-                <span class="border border-1"></span>
-                <div class="moira d-flex ms-3">
-                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="">
-                    <div class="mt-3 ms-4">
-                        <p class="mb-0"> Marcio </p>
-                        <p> Disponible ahora </p>
+                <div class="moira border-bottom d-flex ms-2 mb-2">
+                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="José">
+                    <div>
+                        <p class="mb-0 ms-3 mt-2"> José </p>
+                        <p class="ms-3"> Nam libero tempore </p>
                     </div>
                 </div>
-                <span class="border border-1"></span>
-                <div class="moira d-flex ms-3">
-                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="">
-                    <div class="mt-3 ms-4">
-                        <p class="mb-0"> José </p>
-                        <p> Disponible ahora </p>
+                <div class="moira border-bottom d-flex ms-2 mb-2">
+                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="Daniel">
+                    <div>
+                        <p class="mb-0 ms-3 mt-2"> Daniel </p>
+                        <p class="ms-3"> impedit quo minus ida </p>
                     </div>
                 </div>
-                <span class="border border-1"></span>
-                <div class="moira d-flex ms-3">
-                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="">
-                    <div class="mt-3 ms-4">
-                        <p class="mb-0"> Alejandro </p>
-                        <p> Disponible ahora </p>
+                <div class="moira border-bottom d-flex ms-2 mb-2">
+                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="Alberto">
+                    <div class="d-flex flex-column justify-content-center">
+                        <p class="mb-0 ms-3 mt-2"> Alberto </p>
+                        <p class="ms-3"> At vero eos et accusa </p>
                     </div>
                 </div>
-                <span class="border border-1"></span>
-                <div class="moira d-flex ms-3">
-                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="">
-                    <div class="mt-3 ms-4">
-                        <p class="mb-0"> Pedro </p>
-                        <p> Disponible ahora </p>
+                <div class="moira border-bottom border-end d-flex ms-2 mb-2">
+                    <img class="ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="Tomás">
+                    <div class="d-flex flex-column justify-content-center">
+                        <p class="mb-0 ms-3"> Tomás </p>
+                        <p class="ms-3"> necessitatibus saepe </p>
                     </div>
                 </div>
-                <span class="border border-1"></span>
-                <div class="moira d-flex ms-3">
-                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="">
-                    <div class="mt-3 ms-4">
-                        <p class="mb-0"> Marco </p>
-                        <p> Disponible ahora </p>
+                <div class="moira d-flex ms-2 mb-2">
+                    <img class="ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="Narda">
+                    <div class="d-flex flex-column justify-content-center">
+                        <p class="mb-0 ms-3"> Narda </p>
+                        <p class="ms-3"> ut et voluptates </p>
                     </div>
-                </div>
-                <span class="border border-1"></span>
-                <div class="moira d-flex ms-3">
-                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="">
-                    <div class="mt-3 ms-4">
-                        <p class="mb-0"> Valeria </p>
-                        <p> Disponible ahora </p>
-                    </div>
-                </div>
-                <span class="border border-1"></span>
-            </div> 
-        </span>           
-        <div class="manos d-flex justify-content-center align-items-center flex-column text-center">
-            <img class="ms-5" src="./assets/images/hand.png" alt="Manos"/>
-            <p class="ms-5 mb-0 mt-4 titulo text-center "> Comienza el Nertworking </p>
-            <div class="d-flex">
-                <p class="texto"> Presiona el botón </p>
-                <p class="texto_2" style="font-weight: bold;">“Nuevo chat”</p>
-                <p class="texto_3">para comenzar a crear nuevas 
-                    redes de contacto para tu empresa o emprendimiento. 
-                </p>
+                </div>        
             </div>
-        </div>
+            <div class="manos d-flex justify-content-center align-items-center flex-column ms-5">
+                <img src="./assets/images/hand.png" alt="">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                   <h1>  Comienza el Nertworking </h1>
+                   <p class=""> Presiona el botón <strong> “Nuevo chat” </strong> para comenzar a crear nuevas 
+                    redes de contacto para tu empresa o emprendimiento. </p>
+                </div>
+            </div>
     </section>
 </body>
 </html>
