--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <script src="https://kit.fontawesome.com/deab11b3a0.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@700&display=swap" rel="stylesheet">    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/normalizer.css"/>
     <link rel="stylesheet" href="./assets/css/style.css"/>
@@ -14,90 +14,90 @@
 </head>
 <body>
     <section class="d-flex">
-            <div class="chat border">
-                    <div class="border-bottom d-flex justify-content-between align-items-center">
-                        <div class="maria d-flex align-items-center ms-3">
-                            <img class="mt-0" src="./assets/images/maria.jpg" alt="">
-                            <div class="mt-0 ms-2">
-                                <p class="mb-0 ">María</p>
-                                <p class="activo">Activo ahora</p>
-                            </div>
-                        </div>
-                        <div class="maria_2 mt-0 d-flex">
-                            <i class="fa-regular fa-message fa-xl me-3"></i>
-                            <i class="fa-solid fa-bars fa-xl me-1"></i>
-                        </div>
-                    </div>
-                    <div class="nuevo_chat border d-flex justify-content-center align-items-center">
-                        <div class="nuevo_chat_1 d-flex justify-content-center align-items-center">
-                            <p class="mb-0 mt-0">Nuevo chat</p>
-                        </div>
-                    </div>                
-                <div class="moira border-bottom d-flex ms-2 mb-2 ">
-                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="Moira">
-                    <div >
-                        <p class="mb-0 ms-3 mt-2"> Moira </p>
-                        <p class="ms-3"> At vero eos et accusa </p>
+        <section class="chat border">
+           <div class="maria border d-flex justify-content-between">
+                <div class="maria_1 d-flex ms-4 mt-2 mb-3">
+                    <img src="./assets/images/maria.jpg" alt="María">
+                    <div class="mb-3">
+                        <p class="mb-0 mt-2 ms-3 maria_2"> María </p>
+                        <p class="ms-3 mb-3 activo"> Activa ahora </p>
                     </div>
                 </div>
-                <div class="moira border-bottom d-flex ms-2 mb-2">
-                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="Alejandra">
-                    <div>
-                        <p class="mb-0 ms-3 mt-2"> Alejandra </p>
-                        <p class="ms-3"> blanditiis praesentium </p>
-                    </div>
+                <div class="d-flex align-items-center">
+                    <i class="fa-regular fa-message fa-xl me-3" style="color: #bec1bb;"></i>
+                    <i class="fa-solid fa-bars fa-xl me-4" style="color: #bec1bb;"></i>
                 </div>
-                <div class="moira border-bottom d-flex ms-2 mb-2">
-                    <img class="mt-2 mb-3 ms-3 " src="./assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="Pedro">
-                    <div>
-                        <p class="mb-0 ms-3 mt-2"> Pedro </p>
-                        <p class="ms-3"> officiis debitis aut  </p>
-                    </div>
+           </div>
+           <div class="nuevoChat_padre border d-flex justify-content-center align-items-center">
+                <div class="nuevoChat d-flex justify-content-center align-items-center">
+                    <p class="mb-0">
+                        Nuevo chat
+                    </p>
                 </div>
-                <div class="moira border-bottom d-flex ms-2 mb-2">
-                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="José">
-                    <div>
-                        <p class="mb-0 ms-3 mt-2"> José </p>
-                        <p class="ms-3"> Nam libero tempore </p>
-                    </div>
+           </div> 
+           <div class="moira border d-flex">
+                <img class="ms-4 mt-2 mb-2" src="./assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="Moira">
+                <div class="">
+                    <p class="mb-0 mt-3 ms-3"> Moira </p>
+                    <p class="ms-3"> At vero eos et accusa </p>
                 </div>
-                <div class="moira border-bottom d-flex ms-2 mb-2">
-                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="Daniel">
-                    <div>
-                        <p class="mb-0 ms-3 mt-2"> Daniel </p>
-                        <p class="ms-3"> impedit quo minus ida </p>
-                    </div>
-                </div>
-                <div class="moira border-bottom d-flex ms-2 mb-2">
-                    <img class="mt-2 mb-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="Alberto">
-                    <div class="d-flex flex-column justify-content-center">
-                        <p class="mb-0 ms-3 mt-2"> Alberto </p>
-                        <p class="ms-3"> At vero eos et accusa </p>
-                    </div>
-                </div>
-                <div class="moira border-bottom border-end d-flex ms-2 mb-2">
-                    <img class="ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="Tomás">
-                    <div class="d-flex flex-column justify-content-center">
-                        <p class="mb-0 ms-3"> Tomás </p>
-                        <p class="ms-3"> necessitatibus saepe </p>
-                    </div>
-                </div>
-                <div class="moira d-flex ms-2 mb-2">
-                    <img class="ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="Narda">
-                    <div class="d-flex flex-column justify-content-center">
-                        <p class="mb-0 ms-3"> Narda </p>
-                        <p class="ms-3"> ut et voluptates </p>
-                    </div>
-                </div>        
+           </div>
+           <div class="moira border d-flex">
+            <img class="ms-4 mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="Moira">
+            <div class="">
+                <p class="mb-0 mt-3 ms-3"> Alejandra </p>
+                <p class="ms-3"> blanditiis praesentium </p>
             </div>
-            <div class="manos d-flex justify-content-center align-items-center flex-column ms-5">
-                <img src="./assets/images/hand.png" alt="">
-                <div class="d-flex flex-column justify-content-center align-items-center">
-                   <h1>  Comienza el Nertworking </h1>
-                   <p class=""> Presiona el botón <strong> “Nuevo chat” </strong> para comenzar a crear nuevas 
-                    redes de contacto para tu empresa o emprendimiento. </p>
+       </div>
+       <div class="moira border d-flex">
+                <img class="ms-4 mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="Moira">
+                <div class="">
+                    <p class="mb-0 mt-3 ms-3"> Narda </p>
+                    <p class="ms-3"> officiis debitis aut </p>
                 </div>
+        </div>
+        <div class="moira border d-flex">
+            <img class="ms-4 mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="Moira">
+            <div class="">
+                <p class="mb-0 mt-3 ms-3"> José </p>
+                <p class="ms-3"> Nam libero tempore </p>
             </div>
+        </div>
+        <div class="moira border d-flex">
+            <img class="ms-4 mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="Moira">
+            <div class="">
+                <p class="mb-0 mt-3 ms-3"> Roberto </p>
+                <p class="ms-3"> At vero eos et accusa </p>
+            </div>
+        </div>
+        <div class="moira border d-flex">
+            <img class="ms-4 mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="Moira">
+            <div class="">
+                <p class="mb-0 mt-3 ms-3"> Jaime </p>
+                <p class="ms-3"> impedit quo minus id  </p>
+            </div>
+        </div>
+        <div class="moira border d-flex">
+            <img class="ms-4 mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="Moira">
+            <div class="">
+                <p class="mb-0 mt-3 ms-3"> Nando </p>
+                <p class="ms-3"> At vero eos et accusa </p>
+            </div>
+        </div>
+        <div class="moira border d-flex">
+            <img class="ms-4 mt-2"  src="./assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="Moira">
+            <div class="">
+                <p class="mb-0 mt-3 ms-3"> Marcelina </p>
+                <p class="ms-3"> necessitatibus saepe </p>
+            </div>
+        </div>
+        </section>
+        <section class="manos d-flex flex-column justify-content-center align-items-center">
+            <img src="./assets/images/hand.png" alt="Manos"/>
+            <h1 class="mb-0 titulo"> Comienza el Nertworking </h1>
+            <p class="d-flex "> Presiona el botón <strong> “Nuevo chat” </strong> para comenzar a crear nuevas 
+                redes de contacto para tu empresa o emprendimiento. </p>
+        </section>
     </section>
 </body>
 </html>
